k8s/16-logstash.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: logstash
  namespace: quetzaltv-prod
  labels:
    app: logstash
spec:
  selector:
    matchLabels:
      app: logstash
  template:
    metadata:
      labels:
        app: logstash
    spec:
      serviceAccountName: logstash
      terminationGracePeriodSeconds: 30
      tolerations:
        - key: node-role.kubernetes.io/master
          effect: NoSchedule
      containers:
        - name: logstash
          image: docker.elastic.co/logstash/logstash:8.13.4
          securityContext:
            runAsUser: 0
          args:
            - "-f"
            - "/usr/share/logstash/pipeline/pipeline.conf"
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              cpu: 500m
              memory: 1Gi
          volumeMounts:
            - name: pipeline
              mountPath: /usr/share/logstash/pipeline/pipeline.conf
              subPath: pipeline.conf
              readOnly: true
            - name: varlogcontainers
              mountPath: /var/log/containers
              readOnly: true
            - name: varlogpods
              mountPath: /var/log/pods
              readOnly: true
            - name: data
              mountPath: /usr/share/logstash/data
      volumes:
        - name: pipeline
          configMap:
            name: logstash-config
            items:
              - key: pipeline.conf
                path: pipeline.conf
        - name: varlogcontainers
          hostPath:
            path: /var/log/containers
        - name: varlogpods
          hostPath:
            path: /var/log/pods
        - name: data
          emptyDir: {}
