k8s/03-usuario.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usuario-service
  namespace: quetzaltv-prod
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: usuario-service
  template:
    metadata:
      labels:
        app: usuario-service
    spec:
      containers:
        - name: usuario-service
          image: $AR_REGISTRY/usuario:$VERSION
          ports:
            - containerPort: 8001
            - containerPort: 5001
          resources:
            requests:
              cpu: 30m
              memory: 48Mi
            limits:
              cpu: 150m
              memory: 192Mi
          livenessProbe:
            httpGet:
              path: /health
              port: 8001
            initialDelaySeconds: 15
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health
              port: 8001
            initialDelaySeconds: 5
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: usuario-service
  namespace: quetzaltv-prod
spec:
  selector:
    app: usuario-service
  ports:
    - name: http
      port: 8001
      targetPort: 8001
    - name: grpc
      port: 5001
      targetPort: 5001
