k8s/05-catalogo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: catalogo-service
  namespace: quetzaltv-prod
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  selector:
    matchLabels:
      app: catalogo-service
  template:
    metadata:
      labels:
        app: catalogo-service
    spec:
      serviceAccountName: quetzal-tv-storage-ksa
      containers:
        - name: catalogo-service
          image: $AR_REGISTRY/catalogo:$VERSION
          ports:
            - containerPort: 8003
            - containerPort: 5003
          resources:
            requests:
              cpu: 30m
              memory: 48Mi
            limits:
              cpu: 150m
              memory: 192Mi
          livenessProbe:
            httpGet:
              path: /health
              port: 8003
            initialDelaySeconds: 15
            periodSeconds: 20
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health
              port: 8003
            initialDelaySeconds: 5
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: catalogo-service
  namespace: quetzaltv-prod
spec:
  selector:
    app: catalogo-service
  ports:
    - name: http
      port: 8003
      targetPort: 8003
    - name: grpc
      port: 5003
      targetPort: 5003
